feat: add find_my_result_by_story_id
